Implemented Adding Grocery Items

--- a/Grocery/views/inputItem.html
+++ b/Grocery/views/inputItem.html
@@ -4,11 +4,11 @@
     </div>
     <form name="groceryForm">
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Grocery Item">
+            <input type="text" class="form-control" ng-model="groceryItem.itemName" placeholder="Grocery Item">
         </div>
 
         <div class="form-group">
-            <a href="#/!" class="btn btn-success btn-lg btn-block">
+            <a href="#/!" class="btn btn-success btn-lg btn-block" ng-click="save()">
                 <span class="glyphicon glyphicon-pushpin"></span>
                 Save
             </a>
@@ -21,4 +21,5 @@
             </a>
         </div>
     </form>
+    {{rp}}
 </div>
