Added functionality to Save and Cancel

--- a/Grocery/views/list.html
+++ b/Grocery/views/list.html
@@ -5,6 +5,9 @@
     <ul class="list-group">
         <li ng-repeat="item in groceryItems | orderBy: 'date'" class="list-group-item text-center clearfix">
             <strong>{{item.itemName | uppercase}}</strong>
+            <a href="#!addItem/edit/{{item.id}}" class="btn btn-sm btn-default pull-right">
+                <span class="glyphicon glyphicon-pencil"></span>
+            </a>
         </li>
     </ul>
 </div>
