Added Delete functionality and form validation

--- a/Grocery/views/inputItem.html
+++ b/Grocery/views/inputItem.html
@@ -3,15 +3,26 @@
         <h1>Add Item Below</h1>
     </div>
     <form name="groceryForm">
-        <div class="form-group">
-            <input type="text" class="form-control" ng-model="groceryItem.itemName" placeholder="Grocery Item">
+
+        <!-- <p><b>Dirty:</b> {{groceryForm.$dirty}}</p>
+        <p><b>Pristine:</b> {{groceryForm.$pristine}}</p>
+        <p><b>Valid:</b> {{groceryForm.$valid}}</p> -->
+
+        <div class="alert alert-danger" role="alert" ng-show="groceryForm.$dirty && !groceryForm.$valid">
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span>
+            Enter a valid grocery item!
         </div>
 
         <div class="form-group">
-            <a href="#/!" class="btn btn-success btn-lg btn-block" ng-click="save()">
+            <input type="text" ng-pattern="/^[a-zA-Z]*$/" class="form-control" placeholder="Grocery Item" ng-model="groceryItem.itemName" required>
+        </div>
+
+        <div class="form-group">
+            <button class="btn btn-success btn-lg btn-block" ng-click="groceryForm.$valid && save()">
                 <span class="glyphicon glyphicon-pushpin"></span>
                 Save
-            </a>
+            </button>
         </div>
 
         <div class="form-group">
@@ -21,4 +32,5 @@
             </a>
         </div>
     </form>
+
 </div>
