--- a/Grocery/views/list.html
+++ b/Grocery/views/list.html
@@ -4,15 +4,7 @@
     Add Grocery Item</a>
   <ul class="list-group">
     <li ng-repeat="item in groceryItems | orderBy: '-date'" class="list-group-item text-center clearfix">
-      <strong>{{item.itemName | uppercase}}</strong>
-
-      <button type="button" class="btn btn-sm btn-danger pull-right" ng-click="removeItem(item)">
-        <span class="glyphicon glyphicon-trash"></span>
-      </button>
-
-      <a href="#!addItem/edit/{{item.id}}" class="btn btn-sm btn-default pull-right" style="margin-right:10px;">
-        <span class="glyphicon glyphicon-pencil"></span>
-      </a>
+      <svs-grocery-item></svs-grocery-item>
     </li>
   </ul>
 </div>
